Fix bugs when Channel ID is disabled

Bug: 839993
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_mojo
Change-Id: Iaf461bfa419d9f7bfc0ecffd5a7d9e48cc3019be
Reviewed-on: https://chromium-review.googlesource.com/1044867
Reviewed-by: Matt Menke <mmenke@chromium.org>
Commit-Queue: Nick Harper <nharper@chromium.org>
Cr-Commit-Position: refs/heads/master@{#556633}
Former-commit-id: 1c5817775b404d9f128fffe8911ffa6d109c881b